# 20260311-prefix-beam-paper

./: .gitignore  README.md
20260311/: README.md  environment.yml  monitor_suite.ps1  monitor_suite.py  pyproject.toml  requirements.txt  run_autonomous_beam_loop.py  run_benchmark_suite.py  run_formal_case.py  run_paper_experiments.py  run_paper_overnight.ps1
20260311/data/: README.md  sample_parts.csv
20260311/data/industrial_case_allinone/: I1_I5_manifest.json  I1_parts.csv  I1_raw.csv
20260311/data/industrial_cases/: I1_I5_manifest.json  I1_parts.csv  I1_raw.csv  I2_parts.csv  I2_raw.csv  I3_parts.csv  I3_raw.csv  I4_parts.csv  I4_raw.csv  I5_parts.csv  I5_raw.csv
20260311/data/industrial_new5/: industrial_data2.csv  industrial_data3.csv  industrial_data4.csv  industrial_data5.csv  industrial_data6.csv
20260311/data/industrial_xlsx6/: data1.csv  data1.xlsx  data2.csv  data2.xlsx  data3.csv  data3.xlsx  data4.csv  data4.xlsx  data5.csv  data5.xlsx  data6.csv  data6.xlsx
20260311/data/public_binpacktwo/: instance_meta.csv
20260311/experiments/: run_demo.py
20260311/outputs/: README.md  data1_formal_20260313.py  data1_formal_fullcpu_20260313.py  data2_formal_fullcpu_20260313.py  data2_optimization_history.csv
20260311/outputs/ad_hoc_inputs/: data1.csv  data2.csv
20260311/outputs/autonomous_beam_behavior_round1_20260318/: best_config.json  decision_log.csv  round_summary.csv
20260311/outputs/autonomous_beam_loop_formal_20260317/: best_config.json  decision_log.csv  round_summary.csv
20260311/tests/: test_mcts_quality.py
(+3441 files in other folders)
