[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inrp-cie"
version = "0.2.0"
description = "Nesting-only rectangle packing code"
requires-python = ">=3.8"
dependencies = [
    "ortools>=9.15,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
